# recipe-mixed

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.api  Dockerfile.web  Makefile  README.md  docker-compose.yml
.agents/skills/implement-issue/: SKILL.md
.cursor/rules/: shadcn.mdc
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
crates/api/: Cargo.toml
crates/api/src/: main.rs
deploy/: Caddyfile  compose.prod.yml
docs/: backend-api.md  deployment.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-25/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
issues/: README.md
issues/epics/: EPIC-001-recipe-input.md  EPIC-002-remix-engine.md  EPIC-003-trust-and-safety.md  EPIC-004-remix-experience.md  EPIC-005-saving-and-sharing.md  EPIC-006-mvp-foundation.md
issues/stories/: STORY-000-tech-stack-and-scaffolding.md  STORY-001-paste-recipe-text.md  STORY-002-import-recipe-link.md  STORY-003-normalize-recipe-structure.md  STORY-004-select-remix-direction.md  STORY-005-generate-remixed-recipe.md  STORY-006-show-what-changed.md  STORY-007-cooking-sanity-check.md  STORY-008-remix-adjustments.md  STORY-009-compare-original-and-remix.md  STORY-010-save-remix.md  STORY-011-share-or-copy-remix.md  STORY-012-mvp-app-shell.md  STORY-013-sqlite-backup-strategy.md
issues/templates/: epic.md  story.md
scripts/: backup.sh  deploy.sh
(+14 files in other folders)
